--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -88,6 +88,7 @@
     margin-top: 10px;
     padding-top: 15px;
     display: inline-block;
+    vertical-align: middle;
     min-width: 64px;
 
     font-size: 40px;
