--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -61,6 +61,7 @@
 
   & b {
     display: inline-block;
+    vertical-align: middle;
     margin-bottom: 55px;
 
     font-size: 18px;
